--- a/sensor/system.yaml
+++ b/sensor/system.yaml
@@ -4,11 +4,11 @@
 
 - platform: systemmonitor
   resources:
-    - type: disk_free
-      arg: /
+    # - type: disk_free
+    #   arg: /
     - type: disk_use_percent
       arg: /
-    - type: memory_free
+    # - type: memory_free
     - type: memory_use_percent
     - type: processor_use
     - type: network_in
