--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -41,144 +41,40 @@
       unit_of_measurement: '%'
     count_automations:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['automation'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.automation | list | length }}"
     count_scripts:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['script'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.script | list | length }}"
     count_device_trackers:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['device_tracker'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}        
+      value_template: "{{ states.device_tracker | list | length }}"
     count_binary_sensors:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['binary_sensor'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.binary_sensor | list | length }}"
     count_sensors:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['sensor'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.sensor | list | length }}"
     count_switches:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['switch'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.switch | list | length }}"
     count_zones:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['zone'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.zone | list | length }}"
     count_input_booleans:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['input_boolean'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.input_boolean | list | length }}"
     count_input_numbers:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['input_number'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.input_number | list | length }}"
     count_input_texts:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['input_text'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.input_text | list | length }}"
     count_input_selects:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['input_select'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.input_select | list | length }}"
     count_input_datetimes:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['input_datetime'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.input_datetime | list | length }}"
     count_lights:
       entity_id: sensor.date
-      value_template: >
-        {%- set domains = ['light'] -%}
-        {%- for domain in domains -%}
-          {%- for item in states[domain] -%}
-            {% if loop.first %}
-              {{loop.length}}
-            {% endif %}
-          {%- endfor -%}
-        {%- endfor -%}
+      value_template: "{{ states.light | list | length }}"
